--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ author:
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
-  rss: true
+  #rss: false
   email: "roi.naveiro@gmail.com"
   facebook: roi.naveiroflores
   github: roinaveiro
@@ -89,7 +89,7 @@ social-network-links:
 
 # Select which links to show in the footer
 footer-links-active:
-  rss: false
+  # rss: false
   facebook: false
   email: true
   twitter: false
@@ -107,6 +107,7 @@ footer-links-active:
 
 # Select which share links to show in posts
 share-links-active:
+  # rss: false
   twitter: true
   facebook: true
   google: false
