--- a/_config.yml
+++ b/_config.yml
@@ -108,9 +108,10 @@ footer-links-active:
 # Select which share links to show in posts
 share-links-active:
   # rss: false
-  twitter: true
+  twitter: false
   facebook: true
   google: false
+  github: true
   linkedin: true
 
 # How to display the link to the website in the footer
