--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ baseurl: ""
 navbar-links:
   About Me: "aboutme"
   Research: "research"
+  Teaching: "teaching"
   CV: "cv"
   #Resources:
   #  - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
