--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Roi Naveiro
 
 # Short description of your site
-description: Data Scientist and PhD Student
+description: PhD Student
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
