--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Roi Naveiro"
-  avatar           : "bio-photo.jpg"
-  bio              : "PhD Statistician."
+  avatar           : "me2.jpg"
+  bio              : "PhD, Stats and OR."
   location         : "Madrid, Spain"
   employer         : 
   pubmed           :
