--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Roi Naveiro"
-  avatar           : "me2.jpg"
+  avatar           : "me2.png"
   bio              : "PhD, Stats and OR."
   location         : "Madrid, Spain"
   employer         : 
