--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Roi Naveiro"
-  avatar           : "me2.png"
-  bio              : "PhD, Stats and OR"
+  avatar           : "pp.jpeg"
+  bio              : "Postdoctoral Fellow at ICMAT-CSIC. PhD, Stats and OR"
   location         : "Madrid, Spain"
   employer         : 
   pubmed           :
