--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,9 @@ main:
   - title: "Teaching"
     url: /teaching/
 
+  - title: "Outreach&Community"
+    url: /outreach/  
+
   - title: "Blog Posts"
     url: /year-archive/
 
