--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Roi Naveiro"
   avatar           : "pp.jpeg"
-  bio              : "Postdoctoral Fellow at ICMAT-CSIC. PhD, Stats and OR"
+  bio              : "Assistant Professor at CUNEF. PhD, Stats and OR"
   location         : "Madrid, Spain"
   employer         : 
   pubmed           :
